membuat halaman blog

--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
         <li><a id="btn-navbar" href="home.html">Home</a></li>
         <li><a id="btn-navbar" href="about.html">About Me</a></li>
         <li><a id="btn-navbar" href="portfolio.html">Portfolio</a></li>
-        <li><a id="btn-navbar" href="article.html">Article</a></li>
+        <li><a id="btn-navbar" href="blog.html">Blog</a></li>
     </ul>
     <div class="photo">
         <img src="1x1.jpg" alt="" id="profile">
@@ -30,9 +30,9 @@
         </div> 
     </div>
     <ul class="btn-sosmed">
-        <li><a href="https://www.instagram.com/wonderfullife.2121/"><img src="ig.png" alt="" id="ig"></a></li>
-        <li><a href="https://web.facebook.com/alif.nur.735507/"><img src="fb.png" alt="" id="fb"></a></li>
-        <li><a href="https://www.linkedin.com/in/muhammad-alif-nur-fajri-01082a235/"><img src="link.png" alt="" id="link"></a></li>
+        <li><a href="https://www.instagram.com/wonderfullife.2121/"><img src="logo/ig.png" alt="" id="ig"></a></li>
+        <li><a href="https://web.facebook.com/alif.nur.735507/"><img src="logo/fb.png" alt="" id="fb"></a></li>
+        <li><a href="https://www.linkedin.com/in/muhammad-alif-nur-fajri-01082a235/"><img src="logo/link.png" alt="" id="link"></a></li>
     </ul>
     <script src="script.js"></script>
 </body>
