--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <li><a id="btn-navbar" href="home.html">Home</a></li>
         <li><a id="btn-navbar" href="about.html">About Me</a></li>
         <li><a id="btn-navbar" href="portfolio.html">Portfolio</a></li>
-        <li><a id="btn-navbar" href="article.html">Article</a></li>
+        <li><a id="btn-navbar" href="blog.html">Blog</a></li>
     </ul>
     <div class="container">
         <div id="photo">
@@ -50,6 +50,12 @@
                 <p>Javascript</p>
                 <div class="skillbar">
                     <div class="skills js">40%</div>
+                </div>
+            </div>
+            <div class="skill-container">
+                <p>Designer (Photoshop)</p>
+                <div class="skillbar">
+                    <div class="skills ps">80%</div>
                 </div>
             </div>
         </div>
