--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
         <li><a id="btn-navbar" href="home.html">Home</a></li>
         <li><a id="btn-navbar" href="about.html">About Me</a></li>
         <li><a id="btn-navbar" href="portfolio.html">Portfolio</a></li>
-        <li><a id="btn-navbar" href="article.html">Article</a></li>
+        <li><a id="btn-navbar" href="blog.html">Blog</a></li>
     </ul>
     <section class="container">
         <div class="card">
@@ -21,7 +21,7 @@
             </div>
                 <h4><b>Personal Banner Design</b></h4>
                 <p>Saya membuat sebuah banner design untuk portofolio saya dalam dunia graphic designer</p>
-                <a href="https://pin.it/5sGV8b3" id="link">READ MORE</a>
+                <a href="https://pin.it/5sGV8b3" id="link">VISIT</a>
             </div>
         <div class="card">
             <div class="card-image">
@@ -29,7 +29,7 @@
             </div>
                 <h4><b>Personal Wallpaper Design</b></h4>
                 <p>Selain Banner, saya juga membuka commision personal wallpaper design</p>
-                <a href="https://pin.it/3BeU6O6" id="link">READ MORE</a>
+                <a href="https://pin.it/3BeU6O6" id="link">VISIT</a>
             </div>
         <div class="card">
             <div class="card-image">
@@ -37,7 +37,7 @@
             </div>
                 <h4><b>Street Wear Design</b></h4>
                 <p>Saya juga membuka commision untuk mendesain t-shirt</p>
-                <a href="https://pin.it/GaRBiLB" id="link" >READ MORE</a>
+                <a href="https://pin.it/GaRBiLB" id="link">VISIT</a>
         </div>
     </section>
 
